box/local/logs/project.log
2018-06-13T11:39:10.406Z - normal: Load ~/.CocosCreator/settings.json
2018-06-13T11:39:10.409Z - normal: checking language setting...
2018-06-13T11:39:10.409Z - normal: Language: zh
2018-06-13T11:39:10.930Z - success: protocol editor-framework registered
2018-06-13T11:39:10.930Z - success: protocol app registered
2018-06-13T11:39:10.930Z - success: protocol theme registered
2018-06-13T11:39:10.930Z - success: protocol packages registered
2018-06-13T11:39:10.931Z - success: protocol unpack registerred
2018-06-13T11:39:10.931Z - success: protocol disable-commonjs registerred
2018-06-13T11:39:11.079Z - normal: connected!
2018-06-13T11:39:11.081Z - normal: Check project /Users/bolex1/work/game/box/box
2018-06-13T11:39:11.082Z - normal: Initializing Cocos2d
2018-06-13T11:39:11.249Z - normal: Initializing Asset Database
2018-06-13T11:39:11.270Z - success: protocol uuid registerred
2018-06-13T11:39:11.270Z - success: protocol db registerred
2018-06-13T11:39:11.270Z - success: protocol thumbnail registerred
2018-06-13T11:39:11.270Z - normal: Loading editor/builtin packages
2018-06-13T11:39:11.283Z - success: anysdk loaded
2018-06-13T11:39:11.368Z - success: assets loaded
2018-06-13T11:39:11.371Z - success: builder loaded
2018-06-13T11:39:11.372Z - success: cocos-analytics loaded
2018-06-13T11:39:11.375Z - success: console loaded
2018-06-13T11:39:11.400Z - success: fb-instant-games loaded
2018-06-13T11:39:11.403Z - success: hierarchy loaded
2018-06-13T11:39:11.406Z - success: inspector loaded
2018-06-13T11:39:11.407Z - success: keystore loaded
2018-06-13T11:39:11.413Z - success: node-library loaded
2018-06-13T11:39:11.416Z - success: package-asset loaded
2018-06-13T11:39:11.417Z - success: preferences loaded
2018-06-13T11:39:11.419Z - success: project-exporter loaded
2018-06-13T11:39:11.429Z - success: project-importer loaded
2018-06-13T11:39:11.432Z - success: project-settings loaded
2018-06-13T11:39:11.434Z - success: ui-kit loaded
2018-06-13T11:39:11.438Z - success: ui-grid loaded
2018-06-13T11:39:11.441Z - success: scene loaded
2018-06-13T11:39:11.441Z - success: sprite-editor loaded
2018-06-13T11:39:11.445Z - success: store loaded
2018-06-13T11:39:11.449Z - success: timeline loaded
2018-06-13T11:39:11.449Z - normal: Loading builtin packages
2018-06-13T11:39:11.452Z - success: asset-db-debugger loaded
2018-06-13T11:39:11.453Z - success: color-picker loaded
2018-06-13T11:39:11.455Z - success: package-manager loaded
2018-06-13T11:39:11.459Z - success: sdkbox loaded
2018-06-13T11:39:11.463Z - success: tester loaded
2018-06-13T11:39:11.466Z - success: ui-kit-preview-extra loaded
2018-06-13T11:39:11.469Z - success: ui-kit-preview loaded
2018-06-13T11:39:11.471Z - success: ui-tree loaded
2018-06-13T11:39:12.168Z - normal: Initializing project /Users/bolex1/work/game/box/box
2018-06-13T11:39:12.170Z - normal: Loading packages
2018-06-13T11:39:12.175Z - normal: Watching packages
2018-06-13T11:39:12.184Z - normal: Run Application
2018-06-13T11:39:12.645Z - success: preview server running at http://localhost:7456
2018-06-13T11:39:16.174Z - normal: 1.9.1
2018-06-13T12:52:18.023Z - failed: [db-task][sync-changes] Failed to import asset /Users/bolex1/work/game/box/box/assets/src/controller/BoxController.js, message: Compile error: SyntaxError: /Users/bolex1/work/game/box/box/assets/src/controller/BoxController.js: Unexpected token, expected ) (644:73)
  642 |         if(this.checkCanDestroy(line,row)){
  643 |             for(var i=3;i<7;i++){
> 644 |                 if(this.HattingPos != null && this.HattingPos[i] != null this.HattingPos[i] != undefined){
      |                                                                          ^
  645 |                     if(this.HattingPos[i].x == line && this.HattingPos[i].y == row ){
  646 |                         this.hammers[i].node.active = false;
  647 |                         this.setSmPosition(i);
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:33)
    at Parser.pp$3.parseParenExpression (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3790:8)
    at Parser.pp$1.parseIfStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2058:20)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1846:19)
    at Parser.pp$1.parseBlockBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2268:21)
    at Parser.pp$1.parseBlock (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2247:8)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1868:19)
    at Parser.pp$1.parseFor (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2306:20)
